--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Pizza</title>
+  <title>Portland Pizza Palace Menu</title>
   <link rel="stylesheet" href="./css/pizzastyle.css">
 </head>
 
